[package]
name = "rtsc"
version = "0.1.6"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Real-time Synchronization Components"
repository = "https://github.com/roboplc/rtsc"
keywords = ["realtime", "robots", "plc", "sync"]
readme = "README.md"

[dependencies]
bma-ts = "0.1.12"
object-id = "0.1.4"
parking_lot_rt = "0.12.1"
thiserror = "1.0.61"
rtsc-derive = "0.1.0"
pin-project = "1.1.5"

[dev-dependencies]
insta = "1.39.0"
tokio = { version = "1.36.0", features = ["rt", "macros", "time"] }
