[package]
name = "rtsc"
version = "0.3.11"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Real-time Synchronization Components"
repository = "https://github.com/roboplc/rtsc"
keywords = ["realtime", "robots", "plc", "sync"]
readme = "README.md"

[dependencies]
bma-ts = "0.1"
object-id = "0.1"
thiserror = "1.0"
rtsc-derive = "0.1"
pin-project = "1.1"
parking_lot_rt = "0.12"
parking_lot = { version = "0.12.3", optional = true }
lock_api = "0.4.12"
libc = "0.2.155"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-futex = "1.0.0"

[dev-dependencies]
insta = "1.39"
tokio = { version = "=1.36", features = ["rt", "macros", "time"] }

[features]
serde = ["lock_api/serde"]
